# learnrust

./: .gitignore
adder/examples/: run.rs
adder/src/: lib.rs
askamat/: Cargo.toml
askamat/src/: main.rs
askamat/templates/: settings.html
badscheme/: Cargo.toml
badscheme/src/: main.rs
badscheme2/: Cargo.toml
badscheme2/src/: main.rs
badurls/: Cargo.toml
badurls/src/: main.rs
cat/: Cargo.toml
cat/src/: main.rs
curl/: Cargo.toml
curl/src/: main.rs
curl2/: Cargo.toml
curl2/src/: main.rs
nc/: Cargo.toml
nc/src/: main.rs
sort/: Cargo.toml
sort/src/: main.rs
urlroundtrip/: Cargo.toml
urlroundtrip/src/: main.rs
wordle/: Cargo.toml  Dockerfile  fly.toml  index.html  update.sh  wordle-words-old.txt  wordle-words.txt
wordle/src/: main.rs
