[package]
name = "badscheme"
version = "0.1.0"
authors = ["Jacob Hoffman-Andrews <github@hoffman-andrews.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { features = ["blocking"], path = "../../rust/reqwest" }
tokio = { features = ["rt-threaded", "macros"], version = "0.2.21" }
