[package]
name = "badschema"
version = "0.1.0"
authors = ["Jacob Hoffman-Andrews <github@hoffman-andrews.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { features = ["rt-threaded", "macros"], version = "0.2.21" }
hyper = "0.13.5"
