[package]
name = "curl"
version = "0.1.0"
authors = ["Jacob Hoffman-Andrews <github@hoffman-andrews.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }