[package]
name = "curl2"
version = "0.1.0"
authors = ["Jacob Hoffman-Andrews <github@hoffman-andrews.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.0.0-alpha.3"
async-std = "1.6.0"
http-types = "2.1.0"
